--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
   
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
+    font-size: 10px;
     line-height: 1.5;
-    color: #333;
+    color: #0a0a0a;
     
   }
   
@@ -45,16 +45,15 @@
   
   .logo h1 {
     font-size: 32px;
-    color: #ff7f50;
+    color: #318a248b;
   }
   
   .nav ul {
     display: flex;
     
   }
-  
   .nav li {
-    margin: 0 10px;
+    margin: 0 15px;
   }
   
   .nav li a {
@@ -68,38 +67,38 @@
   /* Global styles */
   body {
     font-family: Verdana, Arial, Tahoma, Serif;
-    margin: 0;
-    padding: 0;
+    margin: 20;
+    padding: 20;
   }
   
   
   .container {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    height: 50vh;
   }
   
   /* Sidebar */
   .sidebar {
     background-color: #ce2121;
     color: #7dc233;
-    width: 200px;
+    width: 150px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 30px;
   }
   
   .logo {
-    font-size: 28px;
+    font-size: 30px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
   }
   
   .menu {
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     align-items: center;
   }
   
@@ -128,8 +127,8 @@
   .header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
+    align-items:center;
+    margin-bottom: 40px;
   }
   
   .header h1 {
@@ -206,7 +205,7 @@
   button:hover {
     background-color: #FFF;
     color: #c6580f;
-    border: 1px solid #333;
+    border: 1px solid #c85817;
   }
   
   h2 {
@@ -269,7 +268,7 @@
   /* Banner styles */
   
   .banner {
-    background-image: linear-gradient(to bottom, #ff7f50, #f96e3d);
+    background-image: linear-gradient(to bottom, #171616, #171616);
     padding: 100px 0;
     text-align: center;
   }
@@ -415,5 +414,102 @@
     margin-right: 0;
   }
   
-  
-  
+/* Reset default styles for forms */
+form {
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+/* Style the container */
+.login-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: #f1f1f1;
+}
+
+/* Style the header */
+h2 {
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
+  font-weight: normal;
+  color: #222222;
+}
+
+/* Style the form fields */
+label {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-size: 1rem;
+  font-weight: bold;
+  color: #222222;
+}
+
+input[type="text"],
+input[type="password"] {
+  display: block;
+  width: 100%;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+  color: #333333;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+  outline: none;
+  border-color: #df6a16;
+}
+
+body {
+  background-color: black;
+}
+
+.login-container {
+  margin: auto;
+  width: 400px;
+  padding: 20px;
+  background-color: orange;
+  border-radius: 10px;
+  box-shadow: none;
+}
+
+.login-container h2 {
+  margin-bottom: 20px;
+  color: black;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  color: black;
+}
+
+input[type="text"],
+input[type="password"] {
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: none;
+}
+
+button[type="submit"] {
+  background-color: black;
+  color: orange;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+a {
+  color: rgb(10, 36, 109);
+}
